cabal-version:      3.4
name:               hviddod
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             George Kozirev
maintainer:         gkozirev.0@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hviddod
    import:           warnings
    main-is:          Main.hs
    other-modules:
      MySDL,
      Menu.Run,
      Menu.Event,
      Menu.Create
    -- other-extensions:
    build-depends:
      base,
      sdl2,
      sdl2-ttf,
      effectful,
      text
    hs-source-dirs:   app
    default-language: Haskell2010
